metrics/pre_refactor_test_results.txt
   Compiling yaoxiang v0.4.4 (E:\git\YaoXiang)
error[E0308]: mismatched types
   --> src\frontend\typecheck\infer.rs:695:43
    |
695 |             let body_ty = self.infer_expr(&arm.body)?;
    |                                ---------- ^^^^^^^^^ expected `&Expr`, found `&Block`
    |                                |
    |                                arguments to this method are incorrect
    |
    = note: expected reference `&ast::Expr`
               found reference `&ast::Block`
note: method defined here
   --> src\frontend\typecheck\infer.rs:191:12
    |
191 |     pub fn infer_expr(
    |            ^^^^^^^^^^
192 |         &mut self,
193 |         expr: &ast::Expr,
    |         ----------------

For more information about this error, try `rustc --explain E0308`.
error: could not compile `yaoxiang` (lib test) due to 1 previous error
